Frontend: fixed notes list overflow. App version is now in index.html title

--- a/frontend/src/NotesListView/NotesList/styles.module.scss
+++ b/frontend/src/NotesListView/NotesList/styles.module.scss
@@ -1,7 +1,13 @@
+.notesList {
+    overflow-y: auto;
+    height: 100%;
+}
+
 .noteEntry {
     height: 50px;
     padding: 5px 15px;
     cursor: pointer;
+    flex-shrink: 0;
 
     &:hover {
         background-color: var(--color-highlight-pale);
