--- a/frontend/src/NotesListView/styles.module.scss
+++ b/frontend/src/NotesListView/styles.module.scss
@@ -2,3 +2,7 @@
     position: relative;
     border-right: 1px solid var(--color-border);
 }
+
+.notesListStack {
+    height: 100vh;
+}
